<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_white">

    <TextView
        android:id="@+id/text_hello_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/hello_login"
        android:textAppearance="@style/TextAppearance.Login_bold_style_anthracite"
        android:textColor="?attr/color_black"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/again"
        android:textAppearance="@style/TextAppearance.Login_bold_style_anthracite"
        android:textColor="?attr/color_blue_1"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@id/text_hello_login"
        app:layout_constraintTop_toBottomOf="@id/text_hello_login" />

    <TextView
        android:id="@+id/text_welcome_back"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_back_you_ve_been_missed"
        android:textColor="?attr/color_anthracite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/text_hello_login"
        app:layout_constraintTop_toBottomOf="@id/text_again" />

    <TextView
        android:id="@+id/text_username"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/username"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/text_welcome_back"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_start"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@id/text_username"
        app:layout_constraintTop_toTopOf="@id/text_username" />

    <EditText
        android:id="@+id/edit_input_login"
        style="@style/LoginActivityMargin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_username"
        app:layout_constraintTop_toBottomOf="@id/text_username" />
    <ImageView
        android:id="@+id/ic_attention"
        android:layout_marginTop="2dp"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="@id/text_username"
        app:layout_constraintTop_toBottomOf="@id/edit_input_login"
        android:src="@drawable/ic_attention"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/text_invalid_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ic_attention"
        app:layout_constraintTop_toBottomOf="@id/edit_input_login"
        android:text="@string/invalid_username"
        android:textColor="?attr/color_red"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_password"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/text_username"
        app:layout_constraintTop_toBottomOf="@id/text_invalid_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_start"
        android:textColor="?attr/color_red"
        app:layout_constraintStart_toEndOf="@id/text_password"
        app:layout_constraintTop_toTopOf="@id/text_password" />

    <EditText
        android:id="@+id/edit_input_password"
        style="@style/LoginActivityMargin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text_rounded"
        app:layout_constraintStart_toStartOf="@id/text_password"
        app:layout_constraintTop_toBottomOf="@id/text_password" />

    <ImageView
        android:id="@+id/image_hide"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="34dp"
        android:src="@drawable/ic_hide"
        app:layout_constraintEnd_toEndOf="@id/edit_input_password"
        app:layout_constraintTop_toTopOf="@id/edit_input_password" />

    <CheckBox
        android:id="@+id/checkbox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="11dp"
        android:buttonTint="?color_blue_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_input_password" />

    <TextView
        android:id="@+id/text_remember_me"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9.5dp"
        android:text="@string/remember_me"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/checkbox_remember_me"
        app:layout_constraintTop_toBottomOf="@id/edit_input_password" />

    <TextView
        android:id="@+id/text_forgot_the_password"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/forgot_the_password"
        android:textColor="?attr/color_blue_2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/edit_input_password"
        app:layout_constraintTop_toBottomOf="@id/edit_input_password" />

    <Button
        android:id="@+id/button_login"
        style="@style/CustomBlueLoginButton"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:fontFamily="@font/poppins_semibold"
        android:textAppearance="@style/TextAppearance.Login_bold_style_anthracite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_input_password" />

    <TextView
        android:id="@+id/text_or_continue_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:layout_marginTop="16dp"
        android:text="@string/or_continue_with"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_facebook"
        style="@style/CustomGreyLoginButton"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        android:layout_marginTop="53dp">
    </Button>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="@id/button_facebook"
        app:layout_constraintTop_toTopOf="@id/button_facebook"
        app:layout_constraintBottom_toBottomOf="@id/button_facebook"
        app:layout_constraintEnd_toEndOf="@id/button_facebook"
        android:layout_marginEnd="124.5dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/ic_facebook" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button_facebook"
        app:layout_constraintEnd_toEndOf="@id/button_facebook"
        app:layout_constraintBottom_toBottomOf="@id/button_facebook"
        app:layout_constraintStart_toStartOf="@id/button_facebook"
        android:textColor="?color_grey_text"
        android:layout_marginEnd="33.5dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="59.5dp"
        android:textSize="16sp"
        android:text="@string/facebook"
        style="@style/TextAppearance.Login_bold_style_anthracite"/>

    <Button
        android:id="@+id/button_google"
        style="@style/CustomGreyLoginButton"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        android:layout_marginTop="53dp"/>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/button_google"
        app:layout_constraintEnd_toEndOf="@id/button_google"
        app:layout_constraintBottom_toBottomOf="@id/button_google"
        app:layout_constraintStart_toStartOf="@id/button_google"
        android:layout_marginStart="36.5dp"
        android:layout_marginEnd="113.5dp"
        android:src="@drawable/ic_google"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Login_bold_style_anthracite"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/button_google"
        app:layout_constraintEnd_toEndOf="@id/button_google"
        app:layout_constraintBottom_toBottomOf="@id/button_google"
        app:layout_constraintStart_toStartOf="@id/button_google"
        android:textColor="?color_grey_text"
        android:layout_marginStart="70.5dp"
        android:layout_marginEnd="44.5dp"
        android:text="@string/google"/>

    <TextView
        android:id="@+id/text_don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        app:layout_constraintStart_toStartOf="@id/button_facebook"
        app:layout_constraintTop_toBottomOf="@id/button_facebook"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account"
        android:layout_marginStart="74dp"/>
    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/color_blue_1"
        app:layout_constraintStart_toEndOf="@id/text_don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/button_google"
        style="@style/TextAppearance.Login_bold_style_anthracite"
        android:text="@string/sign_up"
        android:layout_marginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>