<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="?color_black_2"
        android:text="@string/explore"
        style="@style/TextAppearance.Login_bold_style_anthracite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp" />
    
    <TextView
        android:id="@+id/text_popular_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?color_black_2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text_explore"
        app:layout_constraintTop_toBottomOf="@id/text_explore"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/popular_topic" />
    <TextView
        android:id="@+id/text_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_explore"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:text="@string/see_all" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_topic_recycler_view_explore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_popular_topic"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>