<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ic_kabar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_kabar_logo"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/text_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Login_bold_style_anthracite"
        android:textSize="32sp"
        android:fontFamily="@font/arial_bold"
        app:layout_constraintStart_toStartOf="@id/ic_kabar_logo"
        app:layout_constraintEnd_toEndOf="@id/ic_kabar_logo"
        app:layout_constraintTop_toBottomOf="@id/ic_kabar_logo"
        android:layout_marginTop="46dp"
        android:text="@string/congratulations" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/text_congratulations"
        app:layout_constraintEnd_toEndOf="@id/text_congratulations"
        app:layout_constraintTop_toBottomOf="@id/text_congratulations"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:textSize="16sp"
        android:fontFamily="@font/arial_regular"
        android:text="@string/your_account_is_ready_to_use"/>

    <Button
        style="@style/CustomBlueLoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:textAppearance="@style/TextAppearance.Login_bold_style_anthracite"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="?color_button_text"
        android:textSize="16sp"
        android:text="@string/go_to_homepage" />



</androidx.constraintlayout.widget.ConstraintLayout>