<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_dont_worry1"
        style="@style/TextAppearance.Login_normal_style_anthracite"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/don_t_worry_it_happens"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/button_mail"
        android:background="@drawable/custom_grey_login_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dont_worry1">

        <ImageButton
            android:background="@color/grey_background"
            android:id="@+id/ic_mail"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_mail" />

        <TextView
            android:id="@+id/text_via_email"
            style="@style/TextAppearance.Login_normal_style_anthracite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/ic_mail"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="25dp"
            android:text="@string/via_email"
            android:textColor="?color_grey_text" />

        <TextView
            style="@style/TextAppearance.Login_normal_style_anthracite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="26dp"
            android:text="@string/email"
            android:textColor="?color_black"
            android:layout_alignStart="@id/ic_mail"
            android:layout_alignTop="@id/text_via_email"/>




    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/button_sms"
        android:background="@drawable/custom_grey_login_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_mail">

        <ImageView
            android:id="@+id/ic_sms"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_sms"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/text_via_sms"
            style="@style/TextAppearance.Login_normal_style_anthracite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="25dp"
            android:text="@string/via_sms"
            android:textColor="?color_grey_text"
            android:textSize="14sp"
            android:layout_alignStart="@id/ic_sms"
            android:layout_alignParentTop="true" />

        <TextView
            style="@style/TextAppearance.Login_normal_style_anthracite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="26dp"
            android:text="@string/number"
            android:textColor="?color_black"
            android:layout_alignStart="@id/ic_sms"
            android:layout_alignTop="@id/text_via_sms" />



    </RelativeLayout>

    <RadioGroup
        android:orientation="vertical"
        android:id="@+id/radio_group_password"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="@id/button_mail"
        app:layout_constraintBottom_toBottomOf="@id/button_sms"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="26dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:buttonTint="?color_blue_1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="26dp"
            android:layout_height="24dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="18dp"
            android:buttonTint="?color_blue_1"
             />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>